Fixed Layout Bugs

--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -4,10 +4,10 @@
     position: absolute;
 }
 
-.top tags {
+.top-tags {
     bottom: auto;
     top: 35px;
-}
+} 
 
 .tags {
     color: #ffd700;
